# luminary-backend

./: .env.example  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
cli/app/: main.py
cli/ollama/: main.py
configs/: base.yaml  example.yaml
docker/: Dockerfile  Dockerfile.migrations
migrations/: env.py
migrations/versions/: 16cb271c01ba_idp.py  1c72f6123940_init.py  a02fa8191c5f_init.py
nginx/: nginx.conf
src/bootstrap/: config.py
src/common/application/: exceptions.py
src/common/application/events/: application_event.py
src/common/application/interfaces/handlers/: handler.py
src/common/application/interfaces/policies/: access_policy.py
src/common/application/interfaces/services/: event_bus.py
src/common/application/repositories/: source_repository.py
src/common/domain/: exceptions.py
src/common/domain/events/: domain_event.py  event.py
src/common/domain/interfaces/: entity.py
src/common/domain/value_objects/: id.py  object_key.py  title.py  url.py
src/common/infrastructure/config/: database_config.py  deployment_meta.py  llm_config.py  qdrant_config.py  rabbit_config.py
src/common/infrastructure/database/sqlalchemy/: database.py  executor.py  session_factory.py  unit_of_work.py
src/common/infrastructure/di/container/: common.py  providers.py
src/common/infrastructure/logger/logging/: formatter.py
src/common/infrastructure/queues/faststream/: event_bus.py  utils.py
src/common/infrastructure/storage/minio/: client.py  storage.py
src/common/infrastructure/storage/qdrant/: client.py
src/common/presentation/http/fastapi/: auth.py  cbv.py
src/idp/identity/application/: exceptions.py
src/luminary/assistant/domain/: enums.py
src/luminary/chat/domain/: enums.py
src/luminary/content/application/: exceptions.py
src/luminary/model/application/: exceptions.py
src/luminary/source/domain/: enums.py
src/luminary_files/application/: exceptions.py
src/luminary_files/application/dtos/: dtos.py
src/luminary_files/application/services/: file_service.py
src/luminary_files/domain/: exceptions.py
src/luminary_files/domain/entity/: file.py
src/luminary_files/domain/factories/: file_factory.py
src/luminary_files/domain/interfaces/: extenstion_policy.py  file_factory.py
src/luminary_files/domain/policies/: extenstion_policy.py
src/luminary_files/domain/value_objects/: file_meta.py
src/luminary_files/infrastructure/di/: container.py
src/luminary_files/infrastructure/services/: file_type_introspector.py
tests/integration/faststream/rabbitmq/: test_event_bus.py
tests/integration/minio/repositories/: test_file_stogare.py
tests/integration/sqlalchemy/: conftest.py  test_assistant_read_repository.py  test_assistant_repository.py  test_chat_read_repository.py  test_chat_repository.py  test_folder_read_repository.py  test_folder_repository.py  test_message_repository.py  test_source_read_repository.py  test_source_repository.py  utils.py
tests/intergration/faststream/rabbitmq/: conftest.py
tests/intergration/minio/repositories/: conftest.py
tests/intergration/sqlalchemy/: conftest.py  test_assistant_read_repository.py  test_assistant_repository.py  test_chat_read_repository.py  test_chat_repository.py  test_folder_read_repository.py  test_folder_repository.py  test_message_repository.py  test_source_read_repository.py  test_source_repository.py
tests/unit/: utils.py
tests/unit/assistant/: utils.py
tests/unit/assistant/domain/: test_assistant_entity.py
tests/unit/chat/: utils.py
tests/unit/chat/domain/: test_chat_entity.py  test_message_entity.py
tests/unit/folder/: utils.py
tests/unit/folder/domain/: test_folder_entity.py
tests/unit/source/: utils.py
tests/unit/source/domain/: test_source_entity.py  test_source_factory.py
(+270 files in other folders)
