[project]
name = "luminary"
version = "0.1.0"
description = ""
authors = [{ name = "MDx3R", email = "nationmdxr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "faststream[rabbit] (>=0.6.7,<0.7.0)",
    "llama-index (>=0.14.12,<0.15.0)",
    "minio (>=7.2.20,<8.0.0)",
    "unstructured[docx,md] (>=0.21.5,<0.22.0)",
    "llama-index-vector-stores-qdrant (>=0.9.2,<0.10.0)",
    "qdrant-client (>=1.17.0,<2.0.0)",
    "magika (>=1.0.2,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "luminary", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "testcontainers (>=4.13.1,<5.0.0)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)",
    "types-psycopg2 (>=2.9.21.20250915,<3.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "xenon (>=0.9.3,<0.10.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "detect-secrets (>=1.5.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src/luminary"]
include = ["*.py", "*.pyi"]
exclude = [
    "build",
    "dist",
    ".venv",
    ".git",
    "__pycache__",
    "migrations/versions",
]
fix = true

[tool.ruff.lint]
select = [
    "E",       # ошибки стиля (flake8) 
    "F",       # синтаксические ошибки
    "I",       # сортировка импортов (isort)
    "B",       # баги (flake8-bugbear)
    "C",       # complexity
    "D",       # docstrings (pydocstyle)
    "N",       # pep8-naming (имена переменных, классов)
    "UP",      # pyupgrade (новый синтаксис)
    "C90",     # McCabe (сложность)
    "PL",      # pylint совместимость
    "PT",      # типы (частично mypy)
    "RUF",     # собственные правила Ruff
    "SLF001",  # private member access
    "FAST001", # FastAPI
    "FAST002",
    "FAST003",
]
ignore = [
    "RUF001",
    "D203",
    "D213",
    "E501",
    "D100",   # docstrings
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["luminary"]
lines-after-imports = 2

[tool.mypy]
mypy_path = "src"
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def", "misc", "no-any-unimported"]

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "testcontainers.postgres.*",
    "testcontainers.minio.*",
    "jose.*",
    "yaml.*",
    "filetype.*",
    "llama_index.*",
    "llama_cloud.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = []
